# dsl-raid

./: .gitignore  .gitlab-ci.yml  .golangci.yml  .pre-commit-config.yaml  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  go.mod  traceability.json
crates/dslraid-cli/: Cargo.toml
crates/dslraid-cli/src/: main.rs
crates/dslraid-cli/src/cli/: command.rs  common.rs  demo.rs  docs.rs  formats.rs  generate.rs  graph.rs  mod.rs  ops.rs  outputs.rs  runtime.rs
crates/dslraid-cli/src/commands/: artifact.rs  coverage.rs  generate.rs  golden.rs  mod.rs  query.rs  schema.rs  trace.rs  validate.rs
crates/dslraid-cli/src/commands/artifact/: artifact_row.rs  content_hash.rs  derivation.rs  issue.rs  kind.rs  lock.rs  lock_update.rs  mod.rs  path.rs  record.rs  record_status.rs  report.rs  tests.rs  verify.rs
crates/dslraid-cli/src/commands/compose/: diagnostics.rs  empty.rs  focus.rs  input.rs  materialize.rs  mod.rs  mode.rs  output.rs  product.rs  tests.rs  (+4 more)
crates/dslraid-cli/src/dispatch/: core.rs  graph.rs  mod.rs  outputs.rs  runtime.rs
crates/dslraid-cli/src/support/: io.rs  mod.rs  schema.rs  validation.rs
crates/dslraid-core/: Cargo.toml
crates/dslraid-core/src/: hash.rs  io.rs  lib.rs  schema.rs  subject.rs
crates/dslraid-core/src/lookup/: core.rs  fsm.rs  mod.rs  semantic.rs
crates/dslraid-core/src/model/: artifact.rs  capability.rs  composition.rs  context.rs  diagnostic.rs  effect.rs  event.rs  fsm.rs  mod.rs  project.rs  source.rs  state.rs  transition.rs
crates/dslraid-core/src/tests/: mod.rs
(+1552 files in other folders)
